fix z-index of custom select

--- a/src/components/utils/CustomSelect/index.css
+++ b/src/components/utils/CustomSelect/index.css
@@ -19,7 +19,6 @@
  */
 .select-search__value {
   position: relative;
-  z-index: 1;
 }
 
 .select-search__value::after {
