--- a/src/index.css
+++ b/src/index.css
@@ -26,10 +26,6 @@ code {
   box-sizing: content-box;
 }
 
-.ce-toolbar {
-  z-index: 2;
-}
-
 .react-tags {
   position: relative;
   padding: 6px 0 0 6px;
